fix overlap of button

--- a/frontend/src/components/timer/timer.css
+++ b/frontend/src/components/timer/timer.css
@@ -99,13 +99,13 @@
 
 #haaton4 {
     /*dude haaton at bottom*/
-    bottom: -160px;
+    bottom: -200px;
     left: 250px;
 }
 
 #haaton5 {
     /*dudette haaton at bottom*/
-    bottom: -150px;
+    bottom: -190px;
     left: 150px;
 }
 
